2001-10-17  jacob berkman  <jacob@ximian.com>

	* gnome-vfs-util.c (gnome_gdk_pixbuf_new_from_uri_async): pass
	priority to gnome_vfs_asyn_open()

2001-10-13  Michael Meeks  <michael@ximian.com>

	* gnome-entry.c (gnome_entry_class_init): remove 'changed'
	(entry_changed): ditto. - we already inherit 'changed' from
	the editable interface.

Sun Oct 14 20:14:52 2001  George Lebl <jirka@5z.com>

	* gnome-ui-init.c:  Use the "GnomeProgram" data that's set in
	  libgnome popt stuff now.  Also correctly use the right GnomeProgram
	  object in more places.

Sun Oct 14 18:03:38 2001  George Lebl <jirka@5z.com>

	* gnome-ui-init.c: Fix an INCREDIBLE hack, and a couple of leaks
	  in the gtk init stuff.  All runtime data needs to be stored
	  with the GnomeProgram and NOT the GnomeModuleInfo.

2001-10-13  Seth Nickell  <snickell@stanford.edu>

	* libgnomeui.h:

	gnome-font-picker.h is currently not an installed header
	(nor is gnome-font-picker.c built, nor does it appear to
	build on my system). Removing the include so things that
	depend on libgnomeui will build.
	
2001-10-13  Bastien Nocera  <hadess@hadess.net>

	* libgnomeui.h: gnome-font-picker.h was missing from the include

Thu Oct 11 03:09:08 2001  George Lebl <jirka@5z.com>

	* gnome-mdi.c, gnome-mdi-child.c:  Make
	  gnome_mdi_child_list_menu_remove_item and 
	  gnome_mdi_child_list_menu_add_item private by crafty use of
	  a leading underscore

	* gnome-stock-icons.[ch], gnome-ui-init.c: make
	  gnome_stock_icons_init private by use of a leading underscore.
	  This is reminding me to do a sweep to catch all the private
	  functions and do this trick on them.

2001-10-10  Havoc Pennington  <hp@redhat.com>

	 Fix output of:
	 nm -g -l .libs/libgnomeui-2.so | grep ' T ' | grep -v ' gnome_' |
	 grep -v ' GNOME_'
	
	* gnome-stock-icons.c (gnome_stock_icons_init): renamed from 
	init_gnome_stock_icons, to be in the right namespace.	
	
	* gnome-mdi.c (child_list_menu_remove_item):